...
          style={{ flexDirection: 'row', marginTop: 8 }}
        >
          <View style={{
            backgroundColor: 'rgba(234, 155, 20, 0.7)', position: 'absolute', right: 0, top: 0, alignItems: 'center', justifyContent: 'center',
            width: 38, height: 20, marginRight: 0
          }}>
            <Text style={{ fontSize: 15, fontWeight: '500', color: '#000', paddingLeft: 0 }}>{item.match_count ? item.match_count : 0}</Text>
          </View>
          <View style={{
            position: 'absolute', right: 0, top: 20, transform: [{ rotate: '270deg' }],
            backgroundColor: 'rgba(80, 200, 120, 0.7)', alignItems: 'center', justifyContent: 'center',
            width: 70, height: 35, padding: 0, marginRight: -15, marginTop: 20, marginBottom: 15,
          }}>
...
            <Text style={[styles.subDetailsTitle]}>Builtup</Text>
          </View>
        </View>
      </View>

      <View style={styles.margin1}></View>
      <AccordionListItem title="Details" onPress={scrollToAccordion} open={true}>
        <View style={styles.overviewContainer}>
          {/* <View style={styles.overview}>
          <View
            style={{ justifyContent: "space-between", flexDirection: "row" }}
          >
            <Text>Details</Text>
...
          <View style={styles.overviewColumnWrapper}>
            <View style={styles.overviewLeftColumn}>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.property_details.washroom_numbers}
                </Text>
                <Text style={[styles.subDetailsTitle]}>Bathroom</Text>
              </View>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {formatIsoDateToCustomString(item.rent_details.available_from)}
                </Text>
                <Text style={[styles.subDetailsTitle]}>Possession</Text>
              </View>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.rent_details.preferred_tenants}
                </Text>
                <Text style={[styles.subDetailsTitle]}>Preferred Tenant</Text>
              </View>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.property_details.lift}
                </Text>
                <Text style={[styles.subDetailsTitle]}>Lift</Text>
              </View>
            </View>
            <View style={styles.overviewRightColumn}>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.property_details.parking_number}{" "}
                  {item.property_details.parking_type}
                </Text>
                <Text style={[styles.subDetailsTitle]}>Parking</Text>
              </View>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.property_details.floor_number}/
                  {item.property_details.total_floor}
                </Text>
                <Text style={[styles.subDetailsTitle]}>Floor</Text>
              </View>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.rent_details.non_veg_allowed}
                </Text>
                <Text style={[styles.subDetailsTitle]}>NonVeg</Text>
              </View>
              <View style={[styles.subDetails]}>
                <Text style={[styles.subDetailsValue]}>
                  {item.property_details.property_age} years
                </Text>
                <Text style={[styles.subDetailsTitle]}>Age Of Building</Text>
              </View>
            </View>
          </View>
        </View>
      </AccordionListItem>
      <View style={styles.margin1}></View>
      <AccordionListItem title="Owner" open={false} onPress={scrollToAccordion} testID="owner_accordion">
        <View style={styles.ownerDetails}>
          <View style={{ flexDirection: "row", marginBottom: 0, alignItems: "center", justifyContent: "space-between" }}>
            <View style={{ flexDirection: "column", }}>
              <Text>{item.owner_details.name}</Text>
              <Text>
                {item.owner_details.mobile1?.startsWith("+91")
...
                  : `+91 ${item.owner_details.mobile1}`}
              </Text>
            </View>
            <TouchableOpacity
              onPress={() => makeCall(item.owner_details.mobile1)}
              style={{ padding: 0, marginRight: 35 }}
              testID="owner_phone"
            >
              <FontAwesome5 name="phone-alt" color={"#00bfa5"} size={25} />
              {/* <Text style={{ fontSize: 8, paddingTop: 5 }}>OWNER</Text> */}
            </TouchableOpacity>
          </View>
          <Text style={{ marginTop: 5 }}>{camalize(item.owner_details.address)}</Text>
...
