...
  };

  return (
    <View style={{ flex: 1, backgroundColor: "#ffffff" }}>
      <ScrollView>
        <Text style={{ textAlign: "center", fontSize: 16, fontWeight: 500, marginTop: 10, marginBottom: 10 }}>
          Upcoming Meetings
        </Text>
        {futureReminderList.length > 0 ? <FlatList
          data={futureReminderList}
          //data defined in constructor
          ItemSeparatorComponent={ItemSeparatorView}
          //Item Separator View
...
            <Text style={{ textAlign: "center", fontSize: 15, fontWeight: 300, marginTop: 0, marginBottom: 20, marginTop: 20 }}>
              No Meetings
            </Text>
          </View>
        }
        <Text style={{ textAlign: "center", fontSize: 16, fontWeight: 500, marginTop: 15, marginBottom: 10 }}>
          Past Meetings
        </Text>
        {pastReminderList.length > 0 ? <FlatList
          data={pastReminderList}
          //data defined in constructor
          ItemSeparatorComponent={ItemSeparatorView}
          //Item Separator View
...
