...
        component={GlobalSearch}
        options={{ title: "Global Search", tabBarLabel: "Home!", tabBarVisible: false, headerShown: false, headerBackTitle: "Back" }}
      />
      <Stack.Screen
        name="GlobalResidentialPropertySearchResult"
        component={GlobalResidentialPropertySearchResult}
        options={{ title: "Results", tabBarLabel: "Home!", tabBarVisible: false, headerShown: true }}
      />
      <Stack.Screen
        name="GlobalCommercialPropertySearchResult"
        component={GlobalCommercialPropertySearchResult}
        options={{ title: "Results", tabBarLabel: "Home!", tabBarVisible: false, headerShown: true }}
      />
...
