export const EMPLOYEE_ROLE = ["add", "master", "admin"]// this is who can add employee
export const EMPLOYEE_ROLE_DELETE = ["admin"]
export const RENT = "Rent";
export const SELL = "Sell";
export const BUY = "Buy";
export const RESIDENTIAL = "Residential";
export const COMMERCIAL = "Commercial";
export const PROPERTY = "Property";
export const CUSTOMER = "Customer";
export const CONTACT = "Contact";
export const REMINDER = "Reminder";
export const MEETING = "Meeting";
...
    "Car": "Car",
    "Both": "Both",
    "None": "None"
}

export const HOUSE_TYPE = {
    "Apartment": "Apartment",
    "Independent House": "Independent House",
    "Villa": "Villa"
}

export const USER_STATUS = {
    "Active": "Active",
...
    { text: 'Bachelors' },
];

export const BHK_OPTION = [
    { text: '1RK' },
    { text: '1BHK' },
    { text: '2BHK' },
    { text: '3BHK' },
    { text: '4+BHK' },
];

export const HOUSE_TYPE_OPTION = [
    { text: 'Apartment' },
...
