...
            }}
          />
          <View style={{ marginTop: 25 }} />
          <GooglePlacesAutocomplete
          
            ref={ref}
            placeholder="Add multiple locations within city"
            textInputProps={{
              testID:"GooglePlacesInput",
              placeholderTextColor: 'rgba(90, 90, 90,1)',
              returnKeyType: "search"
            }}
            keyboardShouldPersistTaps='handled'
...
                underlineColor: "transparent",
                backgroundColor: "rgba(245,245,245, 0.1)"
              }
            }}
          />
          <View style={{ marginTop: 20 }}>
            <Button title="NEXT" onPress={() => onSubmit()} />
          </View>
        </ScrollView>
      </KeyboardAwareScrollView>
      <Snackbar
        visible={isVisible}
        textMessage={errorMessage}
...
