appId: com.realtoapp.ios
---
- tapOn: "bottom_tab_properties_icon"
- assertVisible: "Residential"
- tapOn:
    id: "ref_id_526830"
- assertVisible: "Sell Off In RSP1 F1 Wing 1,  RSP1 Building 1, RSP1 Landmark 1"
- assertVisible: "Juhu Beach, Maharashtra, India"
- assertVisible: "2BHK"
- assertVisible: "2.5 Cr"
- assertVisible: "500"
- assertVisible: "Semi"
- assertVisible: "Details"
- assertVisible: "Possession"
- assertVisible: "Age Of Building"
- assertVisible: "Lift"
- tapOn:
    id: "owner_accordion"
- scrollUntilVisible:
    element:
      text: "Upcoming Meetings"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- assertVisible: "RSP1"
- assertVisible: "+91 9833022221"
- assertVisible: "Juhu Mumbai"
- assertVisible:
    id: "owner_phone"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"

- tapOn: "Go back"

- scrollUntilVisible:
    element:
      id: "end_of_list"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- assertVisible: "Reference id: 968284"
- tapOn: "Reference id: 968284"

- assertVisible: "Rent In RRP1 F1 Wing 1,  RRP1 Building 1, RRP1 Landmark 1"
- assertVisible: "Juhu Beach, Maharashtra, India"
- assertVisible: "2BHK"
- assertVisible: "30 K"
- assertVisible: "1.5 Lac"
- assertVisible: "Semi"
- assertVisible: "500sqft"
- assertVisible:
    id: "owner_accordion"
- assertVisible: "Bathroom"
- assertVisible: "Parking"
- assertVisible: "Possession"
- assertVisible: "Floor"
- assertVisible: "Preferred Tenant"
- assertVisible: "Lift"
- assertVisible: "Age Of Building"
- tapOn:
    id: "owner_accordion"
- scrollUntilVisible:
    element:
      text: "Upcoming Meetings"
    direction: down
    visibilityPercentage: 100
    timeout: 10000
- assertVisible: "RRP1"
- assertVisible: "+91 9833011111"
- assertVisible: "Juhu Mumbai"
- assertVisible:
    id: "owner_phone"
- assertVisible: "Upcoming Meetings"
- assertVisible: "Past Meetings"
- tapOn: "Go back"