- runFlow: ../../../shared/login.yaml
- tapOn: "bottom_tab_properties_icon"
- tapOn: "Residential"
- tapOn: "Rent"
- tapOn: "Name*"
- inputText: "Property 1 Residential Rent"
- tapOn: "Mobile*"
- inputText: "1234567890"
- tapOn: "Address*"
- inputText: "Juhu, Mumbai"
- tapOn: "NEXT"
- tapOn: "City*"
- inputText: "Mumbai"
- tapOn: "Add multiple locations within city"
- inputText: "juhu"
- tapOn: "Juhu Beach, Maharashtra"
- tapOn: "Flat No and Wing*"
- inputText: "Flat 101, Wing A"
- tapOn: "Building Name / Society*"
- inputText: "Sunrise Apartments"
- tapOn: "Street / Landmark*"
- inputText: "Near Juhu Beach"
- tapOn: "NEXT"
- tapOn: "Apartment"
- tapOn: "2BHK"

